css,dot env updated

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -23,10 +23,24 @@
       .btn:hover {
         background-color: #0056b3;
       }
+      .header {
+        margin-bottom: 20px;
+      }
+
+      .header-image {
+        width: 100%;
+        height: auto;
+        /* max-height: 200px; */
+        object-fit: cover;
+        border-radius: 8px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
+      <header class="header">
+        <img src="images/family.png" alt="Baby Shower" class="header-image" />
+      </header>
       <h1>Thank You!</h1>
       <p>Your submission has been received.</p>
       <p>Thank you for participating in our baby shower survey.</p>
