--- a/public/admin.html
+++ b/public/admin.html
@@ -53,7 +53,7 @@
       .header-image {
         width: 100%;
         height: auto;
-        max-height: 200px;
+        /* max-height: 200px; */
         object-fit: cover;
         border-radius: 8px;
       }
