minor change in thankyou page

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -44,7 +44,7 @@
       <h1>Thank You!</h1>
       <p>Your submission has been received.</p>
       <p>Thank you for participating in our baby shower survey.</p>
-      <a href="/" class="btn">Go Back</a>
+      <a href="/" class="btn">Home</a>
     </div>
   </body>
 </html>
