Update index.html with NSK

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
           <input type="submit" value="Submit" />
         </div>
       </form>
-      <p style="text-align: right; font-size: 5px">By Sujay Kumar N</p>
+      <p style="text-align: right; font-size: 5px">By: NSK</p>
     </div>
     <script>
       //   document
